Requisition and Item adding UI Controller actions for requisition get(id) and get_all and corresponding model methods

--- a/omnia/templates/base.html
+++ b/omnia/templates/base.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" type="text/css" media="all" href="/css/main.css"/>
         <script type="text/javascript" src="/js/jquery.js"></script>
+        <script type="text/javascript" src="/js/jquery.validate.js"></script>
         <script type="text/javascript" src="/js/main.js"></script>
 
         ${self.custom_js()}
