Add item. I could not continue performing my ajax calls on the activity board. I have a new plan anyway.

--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -9,7 +9,8 @@
     <div class="grid_4 alpha">
         <div class="widget">
             <ul>
-                <li><a href="/requisition">Manage Requisitions</a></li>
+                <li><a href="/requisition">Create Requisition</a></li>
+                <li><a href="#">Manage Requisitions</a></li>
                 <li><a href="#">Approve Requisitions</a></li>
                 <li><a href="#">Generate Order</a></li>
                 <li><a href="#">Receive Goods</a></li>
