--- a/omnia/public/css/req.css
+++ b/omnia/public/css/req.css
@@ -2,36 +2,39 @@
     margin: 0;
 }
 
-.main .widget .activity-board   {
-    padding: 5px 0;
-}
-
-.main form  {
-    background-color: #e8e8e8;
-    padding: 5px 10px;
-    width: 400px;
-}
-
-.main form label  {
-    width: 6em;
-}
-
-.main form fieldset.submit  {
-    padding-left: 92px;
-    padding-bottom: 1em;
-}
-
 .main .widget   {
     border-style: none none solid none;
     padding: 0;
     margin-bottom: 20px;
 }
 
-.main .widget .first    {
-    font-size: 120%;
-    font-weight: bold;
+.activity-board   {
+    padding: 5px 0;
 }
 
-#requisition-form, #add-item-form    {
+.activity-board form  {
+    background-color: #f5f5f5;
+    width: 400px;
+}
+
+.activity-board form label  {
+    width: 6em;
+}
+
+.activity-board form fieldset.submit  {
+    padding-left: 92px;
+    padding-bottom: 1em;
+}
+
+#requisition-form, #add-item-form, #req-info    {
     display: none;
+}
+
+.activity-board .info, .activity-board form   {
+    background-color: #f5f5f5;
+    padding: 10px;
+}
+
+.activity-board .info h6  {
+    border-bottom-style: none;
 }
