View All Requisitions View items in requisition

--- a/omnia/templates/add_item.html
+++ b/omnia/templates/add_item.html
@@ -32,7 +32,7 @@
                             .addClass("err")
                             .html("Error Adding Item");
                     } else  {
-                        document.location = "/requisition/${c.req_id}/edit";
+                        document.location = "/requisition/${c.req_id}/details";
                     }
                 }
 
