--- a/omnia/templates/add_item.html
+++ b/omnia/templates/add_item.html
@@ -3,43 +3,7 @@
 <%def name="title()">Add Item To Requisition</%def>
 
 <%def name="custom_js()">
-    <script>
-
-        function addItem()  {
-
-            var qty = $("#quantity").val();
-            var name = $("#item-name").val();
-            var desc = $("#item-description").val();
-            var unitprice = $("#unitprice").val();
-
-            var data =  "qty=" + qty +
-                        "&name=" + name +
-                        "&desc=" + desc +
-                        "&unitprice=" + unitprice;
-
-            var url = "/requisition/${c.req_id}/new_item";
-
-            $.ajax({
-
-                url: url,
-                type: "POST",
-                data: data,
-                dataType: "json",
-
-                success: function(response) {
-                    if (response.code != 0) {
-                        $("#add-item-form .feedback")
-                            .addClass("err")
-                            .html("Error Adding Item");
-                    } else  {
-                        document.location = "/requisition/${c.req_id}/details";
-                    }
-                }
-
-            });
-
-        }
-    </script>
+    <script src="/js/req.js"></script>
 </%def>
 
 <%def name="menu()">
@@ -57,7 +21,7 @@
     <div class="grid_12 omega main">
         <div class="widget">
             <h4>Add Item To Requisition</h4>
-            <div class="activity-board">
+            <div class="inner">
 
                 <form name="add-item-form" id="add-item-form" class="info-form"><!--{{{-->
                     <div class="feedback">&nbsp;</div>
@@ -83,7 +47,7 @@
                     </fieldset>
 
                     <fieldset class="submit">
-                        <input type="button" class="submit" value="Add" onClick="addItem();"/>
+                        <input type="button" class="submit" value="Add" onClick="addItem('${c.req_id}');"/>
                     </fieldset>
                 </form><!--}}}-->
 
