--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="/requisition">Create Requisition</a></li>
                 <li><a href="/requisition/all">View Requisitions</a></li>
-                <li><a href="#">Approve Requisitions</a></li>
+                <li><a href="/requisition/approve">Approve Requisitions</a></li>
                 <li><a href="#">Generate Order</a></li>
                 <li><a href="#">Receive Goods</a></li>
                 <li><a href="/logout">Logout</a></li>
