--- a/omnia/templates/requisition_detail.html
+++ b/omnia/templates/requisition_detail.html
@@ -3,6 +3,7 @@
 <%def name="title()">Requisition #${c.req_id}</%def>
 
 <%def name="custom_js()">
+    <script src="/js/req.js"></script>
     <script><!--{{{-->
 
         $(function()    {
@@ -13,51 +14,6 @@
             getReq(url);
 
         });
-
-        function getReq(url)  {
-            $.ajax({
-
-                url: url,
-                type: "GET",
-                dataType: "json",
-
-                success: function(response)  {
-
-                    var req = response.data.body;
-
-                    var reqDetail = "<p style='margin-bottom: 0; margin-top: 0;'>" + 
-                                        "<span class='head'>Requisition #" + req['id'] + "</span><br/>" + 
-                                        req['description'] + "&nbsp;&nbsp;" + 
-                                        "<a href='/requisition/" + req['id'] + "/add_item'>Add Item</a>" + 
-                                    "</p>";
-
-                    $("#req-detail").html(reqDetail);
-
-                    if (req['items'] != "") {
-
-                        var items = req['items'];
-                        var itemList = "";
-
-                        for (i=0; i<items.length; i++)  {
-                            itemList += "<tr>" + 
-                                            "<td>" + items[i]['id'] + "</td>" + 
-                                            "<td>" + items[i]['name'] + "</td>" + 
-                                            "<td>" + items[i]['description'] + "</td>" + 
-                                            "<td>" + items[i]['quantity'] + "</td>" + 
-                                            "<td>" + items[i]['unitprice'] + "</td>" + 
-                                            "<td><a href='#'>Edit</a></td>" + 
-                                            "<td><a href='#'>Delete</a></td>" +
-                                        "</tr>";
-                        }
-
-                        $("#req-items").html(itemList);
-
-                    }
-
-                }
-
-            });
-        }
 
     </script><!--}}}-->
 </%def>
@@ -75,11 +31,12 @@
 
 <%def name="activity()"><!--{{{-->
     <div class="grid_12 omega main">
+
         <div class="widget">
             <h4>Requisition Detail</h4>
-            <div class="activity-board">
-                <div id="req-detail" class="info"></div>
-                <div id="item-list" class="info">
+            <div class="inner">
+                <div id="req-detail"></div>
+                <div id="item-list">
                     <h6>Items</h6>
                     <table>
                         <thead>
@@ -97,6 +54,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </%def><!--}}}-->
 
