Data Source for requisitions request now getReq() Calls functions depending on the data type.

--- a/omnia/templates/open_requisitions.html
+++ b/omnia/templates/open_requisitions.html
@@ -19,7 +19,7 @@
     <div class="grid_12 omega main">
         <div class="widget">
             <h4>Approve Requisitions</h4>
-            <div class="activity-board"></div>
+            <div class="inner"></div>
         </div>
     </div>
 </%def>
