--- a/omnia/templates/all_requisitions.html
+++ b/omnia/templates/all_requisitions.html
@@ -8,7 +8,7 @@
         $(function()    {
 
             var url = "/requisition/get_all";
-            getAllReq(url);
+            getReq(url);
 
         });
 
