--- a/omnia/templates/items.html
+++ b/omnia/templates/items.html
@@ -31,20 +31,18 @@
     <div class="grid_12 omega main">
         <div class="widget">
             <h4>Items In Requisition #${c.requisition['id']}</h4>
-            <div class="activity-board">
-                <div class="info">
-                    <table>
-                        <thead>
-                            <th>Item ID.</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Quantity</th>
-                            <th>Unit Price</th>
-                        </thead>
-                        <tbody id="item-container">
-                        </tbody>
-                    </table>
-                </div>
+            <div class="inner">
+                <table>
+                    <thead>
+                        <th>Item ID.</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Quantity</th>
+                        <th>Unit Price</th>
+                    </thead>
+                    <tbody id="item-container">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
