Major UI refactorings * Action req_and_items() used to show requisition details from create, view and approve,     will be used for any situation where requisition details need to be viewed. * document.referrer used to show extra actions on page, wherever needed.
Approval UI ready.

--- a/omnia/public/css/req.css
+++ b/omnia/public/css/req.css
@@ -15,18 +15,14 @@
     font-weight: bold;
 }
 
-#requisition-form    {
+.inner .link-back   {
+    float: left;
+}
+
+.inner .button    {
+    float: right;
+}
+
+#requisition-form, #other, .inner .button    {
     display: none;
-}
-
-
-
-
-#req-detail {
-    margin-bottom: 5px;
-}
-
-#item-list h6   {
-    border-bottom-style: none;
-    margin-bottom: 5px;
 }
