--- a/omnia/templates/all_requisitions.html
+++ b/omnia/templates/all_requisitions.html
@@ -32,18 +32,16 @@
         <div class="widget">
             <h4>All Requisitions</h4>
             <div class="inner">
-                <div id="item-list">
-                    <table>
-                        <thead>
-                            <th>Requisition ID.</th>
-                            <th>Description</th>
-                            <th>Status</th>
-                            <th>Items</th>
-                        </thead>
-                        <tbody id="reqs-container">
-                        </tbody>
-                    </table>
-                </div>
+                <table>
+                    <thead>
+                        <th>Requisition ID.</th>
+                        <th>Description</th>
+                        <th>Status</th>
+                        <th>&nbsp;</th>
+                    </thead>
+                    <tbody id="reqs-container">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
