Wrote functions user_dict() and req_dict() to get objects by id /requisition/get_approved fetches the approved requisitions data from its table and passes the requisitionid and userid through the req_dict() and user_dict() objects respectively to fetch their various objects. Approved requsitions are displayed on approval.

--- a/omnia/templates/dashboard.html
+++ b/omnia/templates/dashboard.html
@@ -24,7 +24,7 @@
         <div class="widget">
             <h4>Dashboard</h4>
             <p>
-                Welcome <b>Oladayo Osikoya</b><br/><br/>
+                Welcome <b>${session['user'].firstname} ${session['user'].lastname}</b><br/><br/>
                 You have 2 pending requistions
             </p>
         </div>
