--- a/omnia/templates/open_requisitions.html
+++ b/omnia/templates/open_requisitions.html
@@ -18,14 +18,7 @@
 </%def>
 
 <%def name="menu()">
-    <div class="grid_4 alpha">
-        <div id="menu" class="widget">
-            <ul>
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-        </div>
-    </div>
+    <%include file="menu.html"/>
 </%def>
 
 <%def name="activity()">
@@ -37,6 +30,9 @@
                     <thead>
                         <th>Requisition ID.</th>
                         <th>Description</th>
+                        <th>Organization</th>
+                        <th>No. of Items</th>
+                        <th>Status</th>
                         <th>&nbsp;</th>
                     </thead>
                     <tbody id="open-reqs-container">
