--- a/omnia/templates/items.html
+++ b/omnia/templates/items.html
@@ -17,14 +17,7 @@
 </%def>
 
 <%def name="menu()">
-    <div class="grid_4 alpha">
-        <div id="menu" class="widget">
-            <ul>
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-        </div>
-    </div>
+    <%include file="menu.html"/>
 </%def>
 
 <%def name="activity()">
